--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      button{
+        width: 300px;
+        height: 50px;
+        background-color: wheat;
+        border-radius: 10px;
+      }
+    </style>
     <title>VueLearn</title>
 </head>
 <body>
