--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="app">
 
     </div>
-    <script type="module">
+    <script type="module" setup>
        import {createApp} from 'vue'
        import myComponent from './my-component.js'
 
