--- a/index.html
+++ b/index.html
@@ -24,14 +24,34 @@
 <body>
     
     
-    <div id="app">
-
+    <div id="app" >
+      <button @click="count++">Number {{count}}</button>
     </div>
-    <script type="module">
-       import {createApp} from 'vue'
-       import myComponent from './my-component.js'
 
-       createApp(myComponent).mount('#app')
+
+    <script type="module">
+
+      // Option API & Composition API
+
+      //  import {createApp} from 'vue'
+      //  import myComponent from './my-component.js'
+
+      //  createApp(myComponent).mount('#app')
+
+
+
+      import {createApp} from 'vue'
+      createApp({
+        data(){
+          return{
+            count : 0,
+
+          }
+        }
+
+      }).mount('#app')
     </script>
+
+
 </body>
 </html>
